<resources>
    <string name="app_name">PodraSchoolApp</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="inbox">Inbox</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="location">Location</string>
    <string name="education">Education</string>
    <string name="openbook">OpenBook</string>
    <string name="checklist">CheckList</string>
    <string name="home_work">Home Work</string>
    <string name="attendance">Attendance</string>
    <string name="schedule">Schedule</string>
    <string name="exams">Exams</string>
    <string name="library">Library</string>
    <string name="absence">Absence</string>
    <string name="_50">50%</string>
    <string name="first_class">FIRST CLASS</string>
    <string name="arabic">ARABIC</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_07_00">: 07:00</string>
    <string name="_08_00">08:00</string>
    <string name="_09_00">09:00</string>
    <string name="_1st_class">1St Class</string>
    <string name="notification">Notification</string>
    <string name="my_son">My Son</string>
    <string name="bus">Bus</string>
    <string name="message">Message</string>
    <string name="date">Date</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="title_activity_teacher_home">TeacherHomeActivity</string>
    <string name="send">Send</string>
    <string name="title_of_lesson">Title of lesson</string>
    <string name="objectives">Objectives</string>
    <string name="the_homework">The homework</string>
    <string name="number_of_bookshelves">Number of bookshelves</string>
    <string name="rack">Rack</string>
    <string name="name_of_book">Name of book</string>
</resources>
