<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddHomeWorkFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:textColorHint="@color/gray"
            android:hint="@string/title_of_lesson"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/noti_design"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/objectives"
            android:textStyle="bold"
            android:textColorHint="@color/gray"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/noti_design"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/the_homework"
            android:textStyle="bold"
            android:textColorHint="@color/gray"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/noti_design"
            />
        <Spinner
            android:id="@+id/classes_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp">
        </Spinner>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_design"
            android:text="@string/send"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>