<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4">

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


        <ImageView
            android:id="@+id/teacher_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/teachers"
            android:layout_margin="5dp"
            />

        <TextView
            android:layout_below="@+id/teacher_img"
            android:id="@+id/numOfClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_1st_class"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/schedule_open_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/open_book_final"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/nameOfClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/schedule_open_book"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/from_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/from_num"
                android:layout_marginTop="5dp"
                android:layout_below="@id/from_txt"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/_08_00"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/to_txt"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/to_num"
                android:layout_below="@id/to_txt"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_09_00"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>