<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/inbox_text_design"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">


    <LinearLayout
        android:id="@+id/rel_library_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_book"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/rel_library_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_of_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_book"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/number_of_bookshelves"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/num_of"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rack"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:id="@+id/num_of_rack"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>